# cloudact-mono-repo

./: .cursorrules  .env.example  .gitignore  AGENTS.md  ALL_55_BUGS_FIXED_100_PERCENT.md  ALL_BUGS_FIXED_SUMMARY.md  ALL_FIXES_SUMMARY_2026-01-09.md  ALL_ISSUES_FIXED_2026-01-08.md  ALL_STARTUP_ERRORS_FIXED_2026-01-09.md  ARCHITECTURE.md  AUTH_TIMEOUT_FIX_2026-01-09.md  AUTH_TIMEOUT_ROOT_CAUSE_2026-01-09.md  BOOTSTRAP_SUCCESS.md  BUG_ANALYSIS_RESULTS.txt  BUG_FIXES_100_PERCENT_COMPLETE_2026-01-08.md  BUG_HUNT_REPORT.md  BUG_REPORT_BOOTSTRAP.md  BUG_REPORT_LOGO_UPLOAD_2026-01-09.md  CLAUDE.md  CLEANUP_REPORT.md  CLUSTERING_FIELDS_FIX_2026-01-09.md  COMPLETE_BUG_FIXES_FINAL.md  COMPREHENSIVE_BUG_HUNT.md  CONTEXT.md  CRITICAL_FIXES_APPLIED_2026-01-08.md  DEPLOYMENT.md  DEPLOYMENT_BUG_HUNT_REPORT_2026-01-08.md  DEVELOPMENT.md  FIXES_APPLIED.md  FIXES_APPLIED_COMPLETE.md  FIXES_APPLIED_SUBSCRIPTION_PIPELINE.md  FIXES_SUMMARY_2026-01-09.md  FIX_ALL_50_BUGS.md  GEMINI.md  HEARTBEAT.md  HIERARCHY_10_LEVEL_MIGRATION_SUMMARY.md  IDENTITY.md  INTEGRATION_BUGS_100_PERCENT_STATUS.md  INTEGRATION_BUGS_86_PERCENT_STATUS.md  INTEGRATION_BUGS_COMPLETE_FINAL_REPORT.md  (+51 more)
.agent/: rules.md
07-org-chat-backend/: .env.dev-cloud  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
07-org-chat-backend/src/a2a/: agent_card.py
07-org-chat-backend/src/app/: config.py  main.py
07-org-chat-backend/src/configs/: agents.yml  allowed_tables.yml
07-org-chat-backend/tests/: conftest.py  test_api.py
07-org-chat-backend/tests/test_agents/: test_model_factory.py  test_orchestrator.py
(+2794 files in other folders)
